# V8_Road_Status_Nigeria

./: .gitignore  .render-buildpacks  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  README_Admin_System.md  README_Lite.md  README_Phase4_Modules.md  README_Render.md  README_Streamlit.md  README_minimal.md  RENDER_DEPLOYMENT_SUMMARY.md  SECURE_DEPLOYMENT_GUIDE.md  SECURITY_COMPARISON.md  SECURITY_FIXES_SUMMARY.md  STREAMLIT_CLOUD_DEPLOYMENT.md  admin_app.py  admin_config_panel.py  admin_dashboard.py  admin_login.py  admin_logs.py  admin_main.py  ai_advice.py  analytics_dashboard.py  app.py  community_validation.py  compatibility_test.py  config.json  config.py  db_setup.py  deploy_app.py  deploy_to_github.py  deploy_to_render.py  enhanced_reports.py  nigerian_roads_data.py  pyproject.toml  render.yaml  render_app.py  (+24 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
mobile_backend/: API_DOCUMENTATION.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt  test_api.py
templates/: dashboard.html  forgot_password.html  login.html  registration.html  reset_password.html
