[project]
name = "road-report-nigeria"
version = "1.0.0"
description = "Road Report Nigeria - Streamlit Application"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit==1.32.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "requests==2.31.0",
    "urllib3==2.0.7",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
]
